--- a/src/main/webapp/resources/Navigation.html
+++ b/src/main/webapp/resources/Navigation.html
@@ -33,7 +33,7 @@
                         <li ng-show="{{loggedInFlag}}"><a href="/app/user/{{id}}/update">Update My Information</a></li>
                         <li ng-show="{{adminFlag}}"><a href="/app/admin">Administrator's Page</a></li>
                         <li class="nav-divider"></li>
-                        <li ng-show="{{loggedInFlag}}"><a ng-click="logout()">Log out</a></li>
+                        <li ng-show="{{loggedInFlag}}"><a href="" ng-click="logout()">Log out</a></li>
                         <li><a href="/app/contact">Contact Us</a></li>
                     </ul>
                 </li>
@@ -52,7 +52,7 @@
                                     <span id="search_concept">{{currentCategory}}</span> <span class="caret"></span>
                                 </button>
                                 <ul class="dropdown-menu" role="menu">
-                                    <li ng-repeat="category in categories"><a ng-click="changeCategory(category)">{{category}}</a></li>
+                                    <li ng-repeat="category in categories"><a href="" ng-click="changeCategory(category)">{{category}}</a></li>
                                 </ul>
                             </div>
                             <!--<input type="hidden" name="search_param" value="all" id="search_param">-->
