Limit the description for an item to only show 28 characters in the thumbnail

--- a/src/main/webapp/resources/shop.html
+++ b/src/main/webapp/resources/shop.html
@@ -66,7 +66,7 @@
                                     <div class="caption">
                                         <h4 class="pull-right">{{merchandise.price | currency}}</h4>
                                         <h4><a ng-href="/app/item/{{merchandise.id}}">{{merchandise.name}}</a></h4>
-                                        <p>{{merchandise.description}}</p>
+                                        <p>{{merchandise.description | limitTo: 28}}</p>
                                     </div>
                                 </div>
                             </div>
